--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1 id="demo">Hello</h1>
     <script src="./main.js"></script>
+
+    <!-- <script>
+        document.getElementById('demo').innerHTML ="Javascript"
+    </script> -->
+
+    <button type="button" onclick="myFunction">Try It</button>
+
+
 </body>
 </html>
